Enables config to limit (debounce) messages

--- a/config_example.json
+++ b/config_example.json
@@ -15,6 +15,8 @@
       "uart_pins_comment" : "On BBB A5C with Debian image 2019-08 requires P9.26 and P9.24 pins to be set as UART. Empty list will not set any pins."
    },
    "cape" : {
-      "disable_leds" : true
+      "disable_leds" : false,
+      "debounce" : false,
+      "debounce_time": 1.0
    }
 }
